tests/Compilation/negative/test006.juvix
-- Once https://github.com/anoma/juvix/issues/2247 is fixed, this should be moved to positive tests
module test006;

type Box (A : Type) :=
  | box : A → Box A;

x : Box ((B : Type) → B → B) :=
  box {_} λ {C x := x};

-- hint = Box ((B : Type) -> B -> B)
-- expr = box

-- match 1 λ {C x := x} ==> 1 ~ _ → 2 → 2

-- (B : Type) → B → B
-- (x1 : _@1) -> (x2 : _@2) -> _@3
